--- a/example_test.ipynb
+++ b/example_test.ipynb
@@ -115,6 +115,7 @@
     "model = HMoRaModel.from_pretrained(base_model, checkpoint_path)\n",
     "peft_weights = torch.load(checkpoint_path + '/' + 'adapter_model.safetensors')\n",
     "model.load_state_dict(peft_weights, strict=False)\n",
+    "model.eval()\n",
     "model"
    ],
    "id": "7391c34c4af6b83b",
