fix some bug for llama

--- a/example_test.ipynb
+++ b/example_test.ipynb
@@ -530,9 +530,9 @@
    },
    "cell_type": "code",
    "source": [
-    "ids = tokenizer(input_text, return_tensors='pt')\n",
+    "ids = tokenizer(input_text, return_tensors='pt', add_special_tokens=False)\n",
     "if model.task_encoder is not None:\n",
-    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt')\n",
+    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
     "    embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
     "    hidden_states = embedding(prefix_tensors.input_ids)\n",
     "    task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
@@ -639,9 +639,9 @@
    },
    "cell_type": "code",
    "source": [
-    "ids = tokenizer(input_text, return_tensors='pt')\n",
+    "ids = tokenizer(input_text, return_tensors='pt', add_special_tokens=False)\n",
     "if model.task_encoder is not None:\n",
-    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt')\n",
+    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
     "    embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
     "    hidden_states = embedding(prefix_tensors.input_ids)\n",
     "    task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
