--- a/generate.ipynb
+++ b/generate.ipynb
@@ -531,13 +531,15 @@
    "cell_type": "code",
    "source": [
     "ids = tokenizer(input_text, return_tensors='pt', add_special_tokens=False)\n",
-    "if model.task_encoder is not None:\n",
-    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
-    "    embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
-    "    hidden_states = embedding(prefix_tensors.input_ids)\n",
-    "    task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
-    "    model.router_manager.set_task_weight(task_embed)\n",
-    "res = model.generate(input_ids=ids.input_ids, max_new_tokens=512, eos_token_id=tokenizer.eos_token_id)"
+    "with torch.no_grad():\n",
+    "    if model.task_encoder is not None:\n",
+    "        prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
+    "        embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
+    "        hidden_states = embedding(prefix_tensors.input_ids)\n",
+    "        task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
+    "        model.router_manager.set_task_weight(task_embed)\n",
+    "\n",
+    "    res = model.generate(input_ids=ids.input_ids, max_new_tokens=512, eos_token_id=tokenizer.eos_token_id)"
    ],
    "id": "782760d22cfc9d79",
    "outputs": [],
@@ -640,13 +642,14 @@
    "cell_type": "code",
    "source": [
     "ids = tokenizer(input_text, return_tensors='pt', add_special_tokens=False)\n",
-    "if model.task_encoder is not None:\n",
-    "    prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
-    "    embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
-    "    hidden_states = embedding(prefix_tensors.input_ids)\n",
-    "    task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
-    "    model.router_manager.set_task_weight(task_embed)\n",
-    "res = model.generate(input_ids=ids.input_ids, max_new_tokens=512, eos_token_id=tokenizer.eos_token_id)"
+    "with torch.no_grad():\n",
+    "    if model.task_encoder is not None:\n",
+    "        prefix_tensors = tokenizer(input_text, padding=True, return_tensors='pt', add_special_tokens=False)\n",
+    "        embedding = getattr(model.base_model, TARGET_MODULE_TYPE[model.config.model_type]['embed'])\n",
+    "        hidden_states = embedding(prefix_tensors.input_ids)\n",
+    "        task_embed = model.task_encoder(hidden_states, prefix_tensors.attention_mask)\n",
+    "        model.router_manager.set_task_weight(task_embed)\n",
+    "    res = model.generate(input_ids=ids.input_ids, max_new_tokens=512, eos_token_id=tokenizer.eos_token_id)"
    ],
    "id": "58ac17ad737b14eb",
    "outputs": [],
